# swversion

./: CHANGELOG.rst  Pipfile  README.rst  __init__.py  pyproject.toml  requirements.txt
examples/: examples_swversion.py
swversion/: helpers.py  sw_version.py  types_.py
tests/: test__helpers.py  test__package.py  test__swversion.py
